Google Maps InfoWindow fix
Foundation resets styles used by Google Maps InfoWindow which is
partially fixed by this overwrite.

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -65,6 +65,11 @@ html, body, #map {
 
 #map {
   display: block;
+
+  //XXX necessary for Google Maps JavaScript API InfoWindow
+  img {
+    max-width: none;
+  }
 }
 
 #logo {
