Changes in logo, filter and map controls
Logo was removed and replaced by "powered by" sign (not styled at the
moment).  Filter buttons support further color differentiation of
state and therefore interaction.  Map controls were moved to the
bottom right corner on desktop.

--- a/public/styles/_settings.scss
+++ b/public/styles/_settings.scss
@@ -334,7 +334,7 @@ $button-med: emCalc(7px);
 
 // $button-font-family: inherit;
 $button-font-color: #fff;
-// $button-font-color-alt: #333;
+$button-font-color-alt: #fff;
 $button-font-med: emCalc(20px);
 // $button-font-tny: emCalc(11px);
 // $button-font-sml: emCalc(13px);
