Ad form opening/closing styled
Some names was refactored (e.g., AdCreationCtrl -> AdFormCtrl or
top right corner and the form also opens there.  The form has a close
button now.

Important note: the button which opens form doesn't have proper icon
now.  Big fat "+" must be created.

--- a/public/styles/_settings.scss
+++ b/public/styles/_settings.scss
@@ -328,7 +328,7 @@ $button-med: emCalc(7px);
 // Display property.
 
 // $button-display: inline-block;
-// $button-margin-bottom: emCalc(20px);
+$button-margin-bottom: 1px;
 
 // Button text styles.
 
