--- a/public/views/_form.html
+++ b/public/views/_form.html
@@ -1,4 +1,4 @@
-<form ng-show="showForm" name="create-form" class="custom">
+<form name="create-form" class="custom">
   <div ng-show="formSent" class="row" style="color: green">
     <div>Odesláno!</div>
   </div>
@@ -62,5 +62,5 @@
   <div class="row">
     <button ng-click="submit()">Odeslat</button>
   </div>
-  <a ng-click="close()" href="#" class="close">&times;</a>
+  <a ng-click="close()" href="#/needs" class="close">&times;</a>
 </form>
