--- a/public/views/_form.html
+++ b/public/views/_form.html
@@ -1,4 +1,4 @@
-<form name="create-form" class="custom">
+<form name="createForm" class="custom" ng-controller="AdFormCtrl" >
   <div ng-show="formSent" class="row" style="color: green">
     <div>Odesláno!</div>
   </div>
