--- a/public/views/_form.html
+++ b/public/views/_form.html
@@ -1,4 +1,4 @@
-<form name="createForm" class="custom" ng-controller="AdFormCtrl" >
+<form name="createForm" class="custom" ng-controller="AdFormCtrl" ng-init="init()">
   <div ng-show="formSent" class="row" style="color: green">
     <div>Odesláno!</div>
   </div>
@@ -61,7 +61,7 @@
   </div>
   <div class="row">
     <button ng-click="submit()">Odeslat</button>
-
+    <button ng-click="remove()" ng-show="editMode == true" ng-cloak>Smazat</button>
   </div>
   <a ng-click="close()" href="#/needs" class="close">&times;</a>
 </form>
