--- a/public/views/new.html
+++ b/public/views/new.html
@@ -1,2 +1,4 @@
-<h2>Potřebuji pomoc</h2>
-<ng-include src="'views/_form.html'"></ng-include>
+<div class="panel">
+  <h2>Potřebuji pomoc</h2>
+  <ng-include src="'views/_form.html'"></ng-include>
+</div>
