--- a/app/templates/adNewEmail/html.ejs
+++ b/app/templates/adNewEmail/html.ejs
@@ -1,5 +1,31 @@
 <html>
+<head>
+    <meta lang="cs">
+</head>
 <body>
-You ad has been created
+<p>
+    Dobrý den
+</p>
+
+<p>
+    Vaše potřeba byla založena.<br/>
+    Na tomto odkazu ji můžete změnit nebo ji označit jako vyřízenou.<br/>
+    <br/>
+    <a href="<%= edit_link %>"><%= edit_link %></a>
+</p>
+
+<p>
+    V případě jakýchkoli dotazů se prosím obracejte na email <a href="mailto:sospomoc@adato.cz">sospomoc@adato.cz</a>
+</p>
+
+</p>
+S pozdravem<br/>
+<br/>
+Team Adato n.o.<br/>
+
+<a href="http://www.sospomoc.cz">www.sospomoc.cz</a> <br/>
+<a href="http://www.adato.cz">www.adato.cz</a> <br/>
+<a href="http://www.hearth.net">www.hearth.net</a> <br/>
+</p>
 </body>
 </html>
