--- a/public/views/_form.html
+++ b/public/views/_form.html
@@ -48,6 +48,13 @@
     </div>
   </div>
   <div class="row">
+      <div class="large-12 columns">
+        <input type="text"
+                ng-model="newItem.contact"
+                placeholder="Doplňující kontaktní údaje (telefon..)">
+      </div>    
+  </div>    
+  <div class="row">
     <div class="large-12 columns">
       <ul class="categories">
         <li ng-repeat="category in newItem.categories"
