Bugfix - change icon after click in Add new form

--- a/public/views/_form.html
+++ b/public/views/_form.html
@@ -60,7 +60,7 @@
         <li ng-repeat="category in newItem.categories"
             ng-click="toggleCategory(category)">
           <label ng-class="{tag:true, checked: category.checked }">
-            <span class="custom checkbox"></span> {{ category.name }}
+            <span ng-class="{ custom: true, checkbox: true, checked: category.checked }"></span> {{ category.name }}
           </label>
         </li>
       </ul>
