New email template, fixed validation of categories in Ad schema

--- a/app/templates/adNewEmail/html.ejs
+++ b/app/templates/adNewEmail/html.ejs
@@ -4,28 +4,26 @@
 </head>
 <body>
 <p>
-    Dobrý den
+    Výborně!
 </p>
 
 <p>
-    Vaše potřeba byla založena.<br/>
-    Na tomto odkazu ji můžete změnit nebo ji označit jako vyřízenou.<br/>
+    Zveřejnění Vaší potřeby na mapě SOSpomoc.cz bylo úspěšné.<br/>
+    Teď už na ni mohou lidé kdykoliv reagovat. Upravit nebo smazat ji můžete po kliknutí na následující odkaz<br/>
     <br/>
     <a href="<%= edit_link %>"><%= edit_link %></a>
 </p>
 
 <p>
-    V případě jakýchkoli dotazů se prosím obracejte na email <a href="mailto:sospomoc@adato.cz">sospomoc@adato.cz</a>
+    V případě nejasnostní nás prosím kontaktujte na emailu <a href="mailto:sospomoc@adato.cz">sospomoc@adato.cz</a>
 </p>
 
+<p>
+    S přáním rychlého vyřešení Vašich nesnází,
+    <br/>
+    tým SOS pomoc.cz
 </p>
-S pozdravem<br/>
-<br/>
-Team Adato n.o.<br/>
 
-<a href="http://www.sospomoc.cz">www.sospomoc.cz</a> <br/>
-<a href="http://www.adato.cz">www.adato.cz</a> <br/>
-<a href="http://www.hearth.net">www.hearth.net</a> <br/>
-</p>
+<a href="http://www.sospomoc.cz"><img alt="www.sospomoc.cz" src="http://www.sospomoc.cz/images/mail-logo.png"></a>
 </body>
 </html>
